--- a/templates/spiel.html
+++ b/templates/spiel.html
@@ -10,8 +10,9 @@
     <div class="starfield center">
         <h1 id="NameRival"></h1>
     </div>
-    <a href="index.sh">Zurueck zum Hauptmenue</a>
+    <a href="index.sh">Zurück zum Hauptmenü</a>
     <div id="gamefield" class="gamefield center">
+        <div class="loading .center">Loading</br><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     </div>
     <script>
         "%GameData%";
