--- a/templates/spiel.html
+++ b/templates/spiel.html
@@ -20,15 +20,20 @@
         var saveData = {};
         var url = "../Advanced-Tick-Tac-Toe/game.sh";
 
+        // Schaut nach ob ein gültiger spielzug getätigt wurde
         const clickHandler = (bigField, smallField, id) => {
             var clickedField = document.getElementById(id);
 
+            // überprüft ob das Spiel bereits gewonnen wurde, falls ja wird eine Meldung ausgegeben
             if(saveData['Winner'] !== ""){
                 alert(`Spieler ${saveData["Winner"]} [${saveData["CurrentPlayer"]}] hat Gewonnen!`);
                 return;
             }
-
+            
+            // falls der letzte zug nicht gesetzt ist kann ein beliebiger zug gemacht werden
             if(lastMove.length != 0){
+                // falls das feld bereits belegt ist oder falls das falsche große spielfeld angeklickt wurde
+                // wird das anclicken ignoriert
                 if(clickedField.innerHTML !== "" || (! isEqualsArray(bigField, lastMove))){
                     return;
                 }
@@ -50,7 +55,6 @@
             // falls ja wird dies in dem saveData dictionary
             let result = checkThreeInARow(saveData['GameField'][bigField[0]][bigField[1]]);
             if (result !== null){
-                alert("Local Winner: " + result);
                 saveData['GameField'][bigField[0]][bigField[1]][3]["Winner"] = result;
                 
                 // formatiert die gewonnenen großen felder so, dass sie mit der selben methode überprüfbar sind, wie die kleinen felder
@@ -78,28 +82,37 @@
             // somit hast der spieler freie auswahl in welchem großen feld er spielen möchte
             if (saveData['GameField'][smallField[0]][smallField[1]][3]["Winner"] !== ""){
                 saveData["LastMove"] = [];
+
                 if(lastMove.length != 0){
                     document.getElementById(lastMove[0] + "|" + lastMove[1]).style = "background-color: none;";
                 }
+
                 lastMove = saveData["LastMove"];
                 return;
             }
 
             document.getElementById("nowPlaying").innerText = `Gerade ist "${currentPlayer}" am zug`;
             saveData["LastMove"] = smallField;
+
+            // Sendet eine Speicherrequest an den Server
             sendGameMove(bigField, smallField, id);
             
+
+            // falls der letzte zug leer ist wird das highlighting entfernt
             if(lastMove.length != 0){
                 document.getElementById(lastMove[0] + "|" + lastMove[1]).style = "background-color: none;";
             }
 
+            // lastmove wird gesetzt
             lastMove = saveData["LastMove"];
 
+            // falls der letzte zug leer ist wird das highlighting entfernt
             if(lastMove.length != 0){
                 document.getElementById(smallField[0] + "|" + smallField[1]).style = `background-color: ${spotLight};`;
             }
         }
 
+        // Setzt den Inhalt der Website nach dem er geladen wurde
         const setPageContent = () => {
             if(lastMove.length != 0){
                 document.getElementById(lastMove[0] + "|" + lastMove[1]).style = `background-color: ${spotLight};`;
@@ -110,13 +123,44 @@
             document.getElementById("nowPlaying").innerText = `Gerade ist "${currentPlayer}" am zug`;
         }
 
+        // Kümmert sich um den online Code
+        const startOnlineCode = () => {
+            var ajax = new XMLHttpRequest();
+            ajax.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    if (this.responseText === "retry") {
+                        startOnlineCode();
+                    }
+                    
+                    saveData = JSON.parse(this.responseText);
+                }
+            };
+            ajax.open("POST", url, true);
+            ajax.send(JSON.stringify({"Type": "WaitForJoin", "NameInput": NameInput, "GameType": GameType, "numberOfFiles": numberOfFiles}));
+        }
+
+        // Läd die Gamesave Datei und setzt das GameFild und den PageContent
+        // macht auch online handeling irgendwie
         const GetGameDataAndRedrawGame = () => {
             var ajax = new XMLHttpRequest();
             ajax.onreadystatechange = function() {
                 if (this.readyState == 4 && this.status == 200) {
                     saveData = JSON.parse(this.responseText);
+
+                    if (GameType === "online"){
+
+                        if (saveData["Players"][1] === "") {
+                            document.getElementById("title").innerText = "Warte Auf weiteren Spieler";
+                            document.getElementById("NameRival").innerText = `Ware Auf weiteren Spieler, GameCode: ${saveData["OnlineCode"]}`;
+                        }
+
+                        startOnlineCode();
+                        return;
+                    }
+                    
                     generateGameField();
 
+                    // Läd die saveDaten in lokale varriablen
                     gameType = saveData["GameType"];
                     players = saveData["Players"];
                     lastMove = saveData["LastMove"];
@@ -124,17 +168,18 @@
                     playerFigures = saveData["PlayerFigurs"];
                     spotLight = saveData["BackGroundSpotlightColor"];
 
-                    setPageContent();               
+                    setPageContent();
                 }
             };
             ajax.open("POST", url, true);
-            ajax.send(JSON.stringify({"Type": "GameData", "NameInput": NameInput, "numberOfFiles": numberOfFiles}));
+            ajax.send(JSON.stringify({"Type": "GameData", "NameInput": NameInput, "GameType": GameType, "numberOfFiles": numberOfFiles}));
         }
 
         const generateGameField = () => {
             var idCounter = 0;
             var GameContent = "";
 
+            // Generiert das Spielfeld
             GameContent += "<table class='game'>";
             for (let i = 0; i < 3; i++) {
                 GameContent += "<tr>";
@@ -157,13 +202,15 @@
             document.getElementById("gamefield").innerHTML = GameContent;
         }
 
+        // Sorgt dafür das der Spielzug gespeichert wird
         const sendGameMove = (bigField, smallField, id) => {
             var ajax = new XMLHttpRequest();
-            const data = JSON.stringify({ "Type": "Save", "numberOfFiles": numberOfFiles, "NameInput": NameInput, "data": saveData});
+            const data = JSON.stringify({ "Type": "Save", "numberOfFiles": numberOfFiles, "GameType": GameType, "NameInput": NameInput, "data": saveData});
             ajax.open("POST", url, true);
             ajax.send(data);
         }
 
+        // schaut ob zwei arrays gleich sind
         const isEqualsArray = (arrA, arrB) => {
             if (arrA.length != arrB.length) {
                 return false; 
