Game Works, but produces some Errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
                     </div>
                     <div class="joinOnline inline">
                         <h2>Join Online Game</h2>
-                        <input type="text" name="Code">
-                        <button name="JoinOnlineGame">Let's Go!</button>
+                        <input type="text" name="JoinCode">
+                        <button name="JoinOnlineGame" value="1">Let's Go!</button>
                     </div>
                     <div class="loadGame inline">
                         <h2>Load Joined Online Game</h2>
